fixed list elements typo

--- a/sonarqube-appset.yaml
+++ b/sonarqube-appset.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
 spec:
   generators:
-    - lists:
+    - list:
         elements:
           - cluster: dev
             namespace: dev-argocd
