--- a/sonarqube-dev/deployment.yaml
+++ b/sonarqube-dev/deployment.yaml
@@ -46,7 +46,7 @@ spec:
     spec:
       containers:
       - name: postgresql
-        image: postgresql:12
+        image: bitnami/postgresql:15.7.0
         env:
         - name: POSTGRES_DB
           value: sonarqube
