--- a/sonarqube-dev/service.yaml
+++ b/sonarqube-dev/service.yaml
@@ -17,10 +17,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sonarqube-postgresql
-spec:
-  selector:
+  labels:
     app: sonarqube-postgresql
-  ports:
-  - protocol: TCP
-    port: 5433
-    targetPort: 5433
+  spec:
+    type: NodePort
+    ports:
+      - port: 5432
+    selector:
+      app: sonarqube-postgresql
+
