--- a/sonarqube-dev/service.yaml
+++ b/sonarqube-dev/service.yaml
@@ -13,16 +13,28 @@ spec:
 
 ---
 
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: sonarqube-postgresql
+#   labels:
+#     app: sonarqube-postgresql
+#   spec:
+#     type: NodePort
+#     ports:
+#      - port: 5432
+#     selector:
+#       app: sonarqube-postgresql
+
 apiVersion: v1
 kind: Service
 metadata:
   name: sonarqube-postgresql
   labels:
     app: sonarqube-postgresql
-  spec:
-    type: NodePort
-    ports:
-     - port: 5432
-    selector:
-      app: sonarqube-postgresql
-
+spec:
+  selector:
+    app: sonarqube-postgresql
+  ports:
+    - port: 5432 
+  clusterIP: None
