--- a/sonarqube-appset.yaml
+++ b/sonarqube-appset.yaml
@@ -19,7 +19,7 @@ spec:
       source:
         repoURL: '{{repoURL}}'
         targetRevision: '{{targetRevision}}'
-        path: 'sonarqube-dev'
+        path: 'sonarqube-dev/'
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{namespace}}'
