--- a/sonarqube-dev/deployment.yaml
+++ b/sonarqube-dev/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: sonarqube
-        image: sonarqube:lts
+        image: bitnami/sonarqube:9.9.6-debian-12-r4
         ports:
         - containerPort: 9000
         resources:
@@ -55,7 +55,7 @@ spec:
     spec:
       containers:
       - name: postgresql
-        image: bitnami/postgresql:15.7.0
+        image: bitnami/postgresql:14.12.0
         env:
         - name: POSTGRES_DB
           value: sonarqube
