--- a/sonarqube-dev/service.yaml
+++ b/sonarqube-dev/service.yaml
@@ -30,11 +30,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sonarqube-postgresql
-  labels:
-    app: sonarqube-postgresql
 spec:
-  selector:
-    app: sonarqube-postgresql
+  type: ClusterIP
   ports:
     - port: 5432 
-  clusterIP: None
+  selector:
+    app: sonarqube-postgresql
