--- a/sonarqube-dev/deployment.yaml
+++ b/sonarqube-dev/deployment.yaml
@@ -28,7 +28,7 @@ spec:
             cpu: "1"
         env:
         - name: SONAR_JDBC_URL
-          value: jdbc:postgresql://sonarqube-postgresql:5432/sonarqube
+          value: jdbc:sonarqube-postgresql://sonarqube-postgresql:5432/sonarqube
         - name: SONARQUBE_DATABASE_PASSWORD
           value: sonarqube
       # nodeSelector:
