--- a/sonarqube-dev/deployment.yaml
+++ b/sonarqube-dev/deployment.yaml
@@ -28,7 +28,7 @@ spec:
             cpu: "1"
         env:
         - name: SONAR_JDBC_URL
-          value: jdbc:postgresql://10.244.1.11:5432/sonarqube
+          value: jdbc:postgresql://postgresql:5432/sonarqube
         - name: SONARQUBE_DATABASE_PASSWORD
           value: sonarqube
       # nodeSelector:
@@ -40,21 +40,21 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sonarqube-postgresql
+  name: postgresql
   labels:
-    app: sonarqube-postgresql
+    app: postgresql
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: sonarqube-postgresql
+      app: postgresql
   template:
     metadata:
       labels:
-        app: sonarqube-postgresql
+        app: postgresql
     spec:
       containers:
-      - name: sonarque-postgresql
+      - name: postgresql
         image: bitnami/postgresql:15.7.0
         env:
         - name: POSTGRES_DB
