--- a/sonarqube-dev/deployment.yaml
+++ b/sonarqube-dev/deployment.yaml
@@ -28,7 +28,7 @@ spec:
             cpu: "1"
         env:
         - name: SONAR_JDBC_URL
-          value: jdbc:postgresql://postgresql:5432/sonarqube
+          value: jdbc:postgresql://postgresql:5432/bitnami_sonarqube
         - name: SONARQUBE_DATABASE_PASSWORD
           value: sonarqube
       # nodeSelector:
@@ -58,7 +58,7 @@ spec:
         image: bitnami/postgresql:15.7.0
         env:
         - name: POSTGRES_DB
-          value: sonarqube
+          value: bitnami_sonarqube
         - name: POSTGRES_USER
           value: bn_sonarqube
         - name: POSTGRESQL_PASSWORD
