--- a/sonarqube-dev/deployment.yaml
+++ b/sonarqube-dev/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: sonarqube
-        image: sonarqube:lts-developer
+        image: sonarqube:latest
         ports:
         - containerPort: 9000
         resources:
