--- a/sonarqube-dev/service.yaml
+++ b/sonarqube-dev/service.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: dev-argocd
   name: sonarqube
 spec:
   selector:
@@ -29,6 +30,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: dev-argocd
   name: postgresql
 spec:
   type: ClusterIP
