--- a/sonarqube-dev/deployment.yaml
+++ b/sonarqube-dev/deployment.yaml
@@ -63,21 +63,21 @@ spec:
       - name: postgresql
         image: bitnami/postgresql:15.7.0
         env:
-        # - name: POSTGRES_DB
-        #   value: bitnami_sonarqube
-        # - name: POSTGRES_USER
-        #   value: bn_sonarqube
+        - name: POSTGRES_DB
+          value: sonarqube
         - name: POSTGRES_USER
-          valueFrom:
-           secretKeyRef:
-              name: sonarqube-db-creds
-              key: POSTGRES_USER
+          value: sonarqube
+        # - name: POSTGRES_USER
+        #   valueFrom:
+        #    secretKeyRef:
+        #       name: sonarqube-db-creds
+        #       key: POSTGRES_USER
 
-        - name: POSTGRESQL_PASSWORD
-          valueFrom:
-           secretKeyRef:
-              name: sonarqube-db-creds
-              key: POSTGRESQL_PASSWORD
+        # - name: POSTGRESQL_PASSWORD
+        #   valueFrom:
+        #    secretKeyRef:
+        #       name: sonarqube-db-creds
+        #       key: POSTGRESQL_PASSWORD
         ports:
         - containerPort: 5432
       # nodeSelector:
