updated namespace in service

--- a/sonarqube-dev/deployment.yaml
+++ b/sonarqube-dev/deployment.yaml
@@ -67,6 +67,8 @@ spec:
           value: sonarqube
         - name: POSTGRES_USER
           value: sonarqube
+        - name: POSTGRESQL_PASSWORD
+          value: sonarqube
         # - name: POSTGRES_USER
         #   valueFrom:
         #    secretKeyRef:
