--- a/sonarqube-dev/deployment.yaml
+++ b/sonarqube-dev/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: sonarqube
-        image: sonarqube:latest
+        image: bitnami/sonarqube:9.9.6
         ports:
         - containerPort: 9000
         resources:
@@ -61,7 +61,7 @@ spec:
     spec:
       containers:
       - name: postgresql
-        image: bitnami/postgresql:15.7.0
+        image: bitnami/postgresql:14.12.0-debian-12-r11
         env:
         - name: POSTGRES_DB
           value: sonarqube
