--- a/sonarqube-dev/sonarqube-db-creds.yaml
+++ b/sonarqube-dev/sonarqube-db-creds.yaml
@@ -6,6 +6,6 @@ metadata:
 type: Opaque
 data:
   SONARQUBE_DATABASE_PASSWORD: c29uYXJxdWJlCg==
-  POSTGRES_USER: c29uYXJxdWJlcG9zdGdyZXNxbAo=
-  POSTGRESQL_PASSWORD: c29uYXJxdWJlcG9zdGdyZXNxbAo=
+  POSTGRES_USER: c29uYXJxdWJlCg==
+  POSTGRESQL_PASSWORD: c29uYXJxdWJlCg==
   
