--- a/sonarqube-dev/configmap.yaml
+++ b/sonarqube-dev/configmap.yaml
@@ -4,6 +4,6 @@ metadata:
   namespace: dev-argocd
   name: sonarqube-config
 data:
-  SONAR_JDBC_URL: jdbc:postgresql://postgresql:5432/sonarqube
+  SONARQUBE_JDBC_URL: jdbc:postgresql://postgresql:5432/sonarqube
   POSTGRES_DB: sonarqube
   POSTGRES_USER: sonarqube
