--- a/sonarqube-dev/deployment.yaml
+++ b/sonarqube-dev/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: sonarqube
-        image: sonarqube:lts
+        image: sonarqube:community
         ports:
         - containerPort: 9000
         resources:
@@ -28,15 +28,27 @@ spec:
             cpu: "1"
         env:
         - name: SONAR_JDBC_URL
-          valueFrom:
-            configMapKeyRef:
-              name: sonarqube-config
-              key: SONARQUBE_JDBC_URL
-        - name: SONARQUBE_DATABASE_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: sonarqube-db-creds
-              key: SONARQUBE_DATABASE_PASSWORD
+          value: jdbc:postgresql://postgresql:5432/sonarqube
+        - name: SONAR_JDBC_USERNAME
+          value: sonarqube
+        - name: SONAR_JDBC_PASSWORD
+          value: sonarqube
+        volumeMounts:
+        - name: sonarqube-storage
+          mountPath: /opt/sonarqube/data
+        volumes:
+        - name: sonarqube-storage
+          persistentVolumeClaim:
+            claimName: sonarqube-pvc
+        #   valueFrom:
+        #     configMapKeyRef:
+        #       name: sonarqube-config
+        #       key: SONARQUBE_JDBC_URL
+        # - name: SONARQUBE_DATABASE_PASSWORD
+        #   valueFrom:
+        #     secretKeyRef:
+        #       name: sonarqube-db-creds
+        #       key: SONARQUBE_DATABASE_PASSWORD
       # nodeSelector:
       #           role: worker
 
@@ -61,14 +73,23 @@ spec:
     spec:
       containers:
       - name: postgresql
-        image: bitnami/postgresql:14.12.0-debian-12-r11
+        image: postgres:14
+        ports:
+        - containerPort: 5432
         env:
         - name: POSTGRES_DB
           value: sonarqube
-        - name: POSTGRESQL_USER
+        - name: POSTGRES_USER
           value: sonarqube
-        - name: POSTGRESQL_PASSWORD
+        - name: POSTGRES_PASSWORD
           value: sonarqube
+        volumeMounts:
+        - name: postgresql-storage
+          mountPath: /var/lib/postgresql/data
+      volumes:
+      - name: postgresql-storage
+        persistentVolumeClaim:
+          claimName: posgresql-pvc
         # - name: POSTGRES_USER
         #   valueFrom:
         #    secretKeyRef:
@@ -84,3 +105,26 @@ spec:
         - containerPort: 5432
       # nodeSelector:
       #           role: worker
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: sonarqube-pvc
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgresql-pvc
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
