--- a/sonarqube-dev/service.yaml
+++ b/sonarqube-dev/service.yaml
@@ -1,16 +1,29 @@
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   namespace: dev-argocd
+#   name: sonarqube
+# spec:
+#   selector:
+#     app: sonarqube
+#   ports:
+#   - protocol: TCP
+#     port: 9000
+#     targetPort: 9000
+#   type: LoadBalancer
+
 apiVersion: v1
 kind: Service
 metadata:
   namespace: dev-argocd
   name: sonarqube
 spec:
+  type: ClusterIP
+  ports:
+    - port: 9000
+      targetPort: 9000
   selector:
     app: sonarqube
-  ports:
-  - protocol: TCP
-    port: 9000
-    targetPort: 9000
-  type: LoadBalancer
 
 ---
 
